Snyk og oppdateringer. Felles BOM (#118)